# PiDashboard

./: .env.template  CMakeLists.txt  ImageDownloader.cpp  ImageDownloader.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  XmlReader.cpp  XmlReader.h  main.cpp  resources.qrc
